@@ -4,6 +4,7 @@ python3.13 (3.13.0~rc1-2) UNRELEASED; urgency=medium
   * Drop patch fix-py_compile. Superseded upstream in 3.11.
   * Drop patch sphinx3, superseded upstream in 3.10.
   * Expand on patch comments.
+  * Forward some patches.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 09 Aug 2024 20:31:22 +0900
 
